manifests/05-ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-app
  namespace: demo-app
  annotations:
    cert-manager.io/cluster-issuer: duncan-networks-ca-issuer
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - demo-app.apps.duncan-networks.local
      secretName: demo-app-tls
  rules:
    - host: demo-app.apps.duncan-networks.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-app
                port:
                  number: 8080
